--- a/Bootstrap/main.css
+++ b/Bootstrap/main.css
@@ -1,6 +1,6 @@
 .myDiv {
-    width: 300px;
-    height: 300px;
+    width: 100%;
+    height: 200px;
     margin: 20px 10px;
     color: white;
     display: inline-block;
