--- a/Bootstrap/main.css
+++ b/Bootstrap/main.css
@@ -5,6 +5,8 @@
     color: white;
     display: inline-block;
     border: solid 1px gray;
+    background: url('./imgs/borsh.jpeg') no-repeat center center;
+    background-size: cover;
 }
 #red {
     background-color: red;
