Web Components - JS Modules WORKING

--- a/Bootstrap/main.css
+++ b/Bootstrap/main.css
@@ -8,6 +8,10 @@
     background: url('./imgs/borsh.jpeg') no-repeat center center;
     background-size: cover;
 }
+summary:focus {
+    outline: none;
+    background-color: antiquewhite;
+}
 #red {
     background-color: red;
 }
