--- a/Components/index.html
+++ b/Components/index.html
@@ -9,14 +9,14 @@
     <!-- html imports -->
     <!-- Component - Module JS -->
     <script src="./component.js"></script>
+    <script src="./links.js"></script>
     <!-- Component - Module JS -->
     <title>Web Components</title>
 </head>
 <body>
 
-    <a href="https://app.pluralsight.com/player?course=vanilla-web-components-practical-guide&author=leon-revill&name=vanilla-web-components-practical-guide-m1&clip=7&mode=live">html imports</a>
 
-
+    <links-component></links-component>
     <my-component></my-component>
     <my-component></my-component>
     <my-component></my-component>
